welcome.lessons.welcome.traversal.Snake.scala.error
SnakeBuggle:31: error: not found: value getdirection
  getdirection()
  ^SnakeBuggle:34: error: not found: value posfinale
  	posfinale=true
        ^SnakeBuggle:36: error: not found: value posfinale
  return posfinale
         ^SnakeBuggle:36: warning: enclosing method rep has result type Unit: return value discarded
  return posfinale
  ^